[package]
name = "actix"
version = "0.1.0"
authors = ["modeverv <modeverv@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[target.x86_64-unknown-linux-musl]
linker = "x86_64-linux-musl-gcc"

[dependencies]
actix-web = "2"
actix-rt = "1"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
